--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -11,19 +11,19 @@ $highlight-5: #767676;
 
 $highlight-font: #2ea540;
 
-$primary: #000000;
+$primary: #010247;
 $secondary: #0263c4;
-$note-color: #393939;
+$note-color: #979595;
 
 @keyframes blink {
   0% {
-    background-color: $highlight-4;
+    background-color: $highlight-3;
   }
   50% {
     background-color: $highlight-5;
   }
   100% {
-    background-color: $highlight-4;
+    background-color: $highlight-3;
   }
 }
 #app {
@@ -66,7 +66,7 @@ $note-color: #393939;
     }
     td.note {
       color: $note-color;
-      font-size: $font-size / 2;
+      font-size: $font-size / 2.5;
       width: $cell-size / 4;
       height: $cell-size / 4;
       text-align: center;
@@ -78,6 +78,8 @@ $note-color: #393939;
     td.selectedNumber {
       color: $highlight-font;
       font-weight: bold;
+      background-color: $highlight-3;
+      border-radius: $cell-size / 8;
     }
   }
 
@@ -143,14 +145,14 @@ $note-color: #393939;
       background-color: $highlight-3;
       color: white;
     }
-    .cell.invalid {
-      background-color: red;
-      color: white;
-    }
     .cell.selectedNumber {
       color: $highlight-font;
       font-weight: bold;
-      background-color: $highlight-2;
+      background-color: $highlight-3;
+    }
+    .cell.invalid {
+      background-color: red;
+      color: white;
     }
     td.edit {
       color: white;
